<resources>
    <string name="versionInfo">Změny v aplikaci - 2.0</string>
    <string name="versionNodes"> - kompletní změna designu\n- vylepšení známek\n- objednávání jídla\n- chytrá upozornění</string>
    <string name="app_name">GyMik</string>
    <string name="school_name">Gymnázium Plzeň</string>
    <string name="action_settings">Nastavení</string>
    <string name="action_reload">Obnovit</string>
    <string name="latestNews">Novinky</string>
    <string name="latestSupl">Suplování</string>
    <string name="drawer_open">Otevřít navigaci</string>
    <string name="drawer_close">Zavřít navigaci</string>
    <string name="prizemi">Přízemí</string>
    <string name="p1patro">1.patro</string>
    <string name="p2patro">2.patro</string>
    <string name="vestavba">Vestavba</string>
    <string name="pondeli">Pondělí</string>
    <string name="utery">Úterý</string>
    <string name="streda">Středa</string>
    <string name="ctvrtek">Čtvrtek</string>
    <string name="patek">Pátek</string>
    <string name="pickClass">Vyberte třídu :</string>
    <string name="continueString">Pokračovat</string>
    <string name="firstRun">Instalace</string>
    <string name="pleaseWait">Prosím vyčkejte...</string>
    <string name="warning">Upozornění</string>
    <string name="exitDialog1">Opravdu chcete aplikaci ukončit během úvodního nastavení? Tato akce není doporučena.</string>
	<string name="exitDialog2">V této fázi aplikaci nelze ukončit, prosím vyčkejte na stažení potřebných dat.</string>
	<string name="noInternetDataDownloadFailed">Stažení dat potřebných pro spuštění se nezdařilo z důvodu nedostupnosti připojení k internetu. Připojte se a zkuste to znovu.</string>
	<string name="cantDownloadActualDataNoInternet">Nepodařilo se stáhnout aktuální data z důvodu nedostupného připojení k internetu</string>
	<string name="dialogOk">Ok</string>
	<string name="dialogExit">Konec</string>
	<string name="dialogSettings">Nastavení</string>
	<string name="dialogClose">Zavřít</string>
	<string name="dialogLink">Odkaz</string>
	<string name="noInternet">Internet nedostupný, prosím připojte se k internetu</string>
	<string name="noStorage">Není dostupné úložiště. Aplikace ke svému spuštění potřebuje externí úložiště(SD kartu), které je nyní nedostupné.</string>
	<string name="sDialogHodina">Hodina : </string>
	<string name="sDialogPredmet">Předmět : </string>
	<string name="sDialogStav">Stav : </string>
	<string name="sDialogSkupina">Skupina : </string>
	<string name="sDialogMistnost">Místnost : </string>
	<string name="sDialogNahrazuje">Nahrazuje : </string>
	<string name="bakUser">Uživatelské jméno : </string>
	<string name="bakPsw">Heslo : </string>
	<string name="customClassName">JINÁ</string>
	<string name="missingRozvrh">Chybí rozvrh, je třeba se přihlásit v nastavení a stáhnout rozvrh</string>
	<string name="predmetName">Předmět</string>
	<string name="predmetAverage">Průměr</string>
    <string name="download">Stáhnout...</string>
	<string-array name="dayTimes">
	    <item>Půlnoc</item>
	    <item>Ráno</item>
	    <item>Kolem 11</item>
	    <item>Odpoledne</item>
	</string-array>
	<string-array name="dayTimesValues">
	    <item>midnight</item>
	    <item>morning</item>
	    <item>school</item>
	    <item>afternoon</item>
	</string-array>
    <string name="bakLogin">Přihlášení bakaláři</string>
    <string name="install_info_text">Vítejte v aplikaci GyMik</string>
</resources>