<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TableRow
        android:layout_width="match_parent">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/sDialogHodina"
            android:layout_margin="5dp"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:id="@+id/sDialogHodina"/>
    </TableRow>
    
    <TableRow
        android:layout_width="match_parent">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:text="@string/sDialogPredmet"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:id="@+id/sDialogPredmet"/>
    </TableRow>
    
    <TableRow
        android:layout_width="match_parent">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:text="@string/sDialogStav"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:id="@+id/sDialogStav"/>
    </TableRow>
    
    <TableRow
        android:layout_width="match_parent">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:text="@string/sDialogSkupina"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:id="@+id/sDialogSkupina"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:text="@string/sDialogMistnost"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:id="@+id/sDialogMistnost"/>
    </TableRow>
    
    <TableRow
        android:layout_width="match_parent">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:text="@string/sDialogNahrazuje"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:id="@+id/sDialogNahrazuje"/>
    </TableRow>
    
</TableLayout>
