<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha=".1"
        android:src="@drawable/logo"
        android:layout_centerInParent="true"
        android:padding="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/installInfoText"
        android:text="@string/install_info_text"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAllCaps="true"
        android:padding="10dp"/>

    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/installInfoText"
        android:text="@string/pickClass"
        style="@style/ListViewHeaderItem"
        android:id="@+id/firstRunText"/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/list_view_item_divider"
        android:id="@+id/delimiter"5
        android:layout_below="@+id/firstRunText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_below="@+id/delimiter">
        <Spinner
            android:layout_width="0dp"
            android:layout_weight="80"
            android:layout_height="match_parent"
            android:id="@+id/pickClassSpinner"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="20"
            android:layout_height="match_parent"
            android:id="@+id/customClassName"
            android:text="@string/customClassName"/>
    </LinearLayout>
    
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:id="@+id/installButton"
        android:layout_alignParentBottom="true"
        style="@style/ButtonGymikAppTheme"
        android:text="@string/continueString"/>
    
</RelativeLayout>
