<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Nejsou stažené známky, je třeba být přihlášen a stáhnout známky :"
        android:id="@+id/textViewTop"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/znamky_login_form"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bakUser"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/znamky_username"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bakPsw"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:password="true"
            android:id="@+id/znamky_password"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/znamky_login"
            android:text="@string/bakLogin"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTop"
        android:text="@string/download"
        android:textSize="22sp"
        android:visibility="gone"
        android:id="@+id/znamky_download_znamky"/>

</RelativeLayout>